--- a/.github/workflows/bithollow-website-docker-compose.yaml
+++ b/.github/workflows/bithollow-website-docker-compose.yaml
@@ -18,14 +18,14 @@ jobs:
         run: |
           echo "Starting monthly Bithollow deployment..."
 
-          # cd ${{ env.DEPLOY_PATH }}
+          cd ${{ env.DEPLOY_PATH }}
           echo "Pulling latest Docker images..."
-          # docker-compose -f ${{ env. COMPOSE_FILE }} pull
+          docker-compose -f ${{ env. COMPOSE_FILE }} pull
 
           echo "Rebuilding and restarting services with zero-downtime (if configured)..."
-          # docker-compose -f ${{ env.COMPOSE_FILE }} up -d --build --remove-orphans
+          docker-compose -f ${{ env.COMPOSE_FILE }} up -d --build --remove-orphans
 
           echo "Cleaning up old images and volumes..."
-          # docker system prune -f
+          docker system prune -f
 
           echo "Bithollow monthly deployment complete!"
